--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,10 @@ button {
   padding: 1.5rem;
 }
 
+h3 {
+  text-transform: uppercase;
+}
+
 #result-text {
   padding: 1rem;
 }
@@ -67,4 +71,14 @@ footer {
   padding: 0.5rem 0;
   background-color: teal;
   color: #fff;
+}
+
+a {
+  color: rgb(218, 218, 218);
+  text-decoration: none;
+  font-style: italic;
+}
+
+a:hover {
+  text-decoration: underline;
 }
